--- a/habit-tracker/package.json
+++ b/habit-tracker/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "bootstrap": "^5.0.0",
     "bootstrap-vue": "^2.21.2",
+    "chart.js": "^2.9.4",
     "vue": "^2.6.12",
+    "vue-chartjs": "3.5.1",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
