--- a/habit-tracker/package.json
+++ b/habit-tracker/package.json
@@ -7,19 +7,22 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "bootstrap": "^5.0.0",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.0.1",
     "bootstrap-vue": "^2.21.2",
     "chart.js": "^2.9.4",
+    "jwt-decode": "^3.1.2",
     "vue": "^2.6.12",
     "vue-chartjs": "3.5.1",
     "vue-router": "^3.2.0",
+    "vuelidate": "^0.7.6",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "sass": "^1.26.5",
+    "@vue/cli-plugin-router": "^4.5.13",
+    "@vue/cli-plugin-vuex": "^4.5.13",
+    "@vue/cli-service": "^4.5.13",
+    "sass": "^1.32.13",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   },
